--- a/maquette2.css
+++ b/maquette2.css
@@ -2,7 +2,7 @@
     padding: 0;
     margin: 0;
     font-family: sans-serif;
-
+    box-sizing: border-box;
 }
 body {
     width: 100vw;
@@ -10,9 +10,12 @@ body {
     overflow-x:hidden ;
     position: relative;
 }
+button {
+    cursor: pointer;
+}
 header {
     width: 100%;
-    height: 20vh;
+    height: 12vh;
     position: relative;
 }
 .navbar {
@@ -42,14 +45,14 @@ header {
     align-items: center;
 }
 .logo img {
-    width: 60px;
-    height: 50px;
+    width: 50px;
+    height: 40px;
     margin-right: 10px;
     
 }
 .logo h1 {
     color: #eee;
-    font-size: 3rem;
+    font-size: 2rem;
     font-weight: 900;
     text-transform: uppercase;
     letter-spacing: 2px;
@@ -63,16 +66,20 @@ header {
     justify-content: space-evenly;
 }
 .links a {
-    color: white;
+    color: #817e7e;
     text-decoration: none;
     letter-spacing: 1.2px;
     text-transform: uppercase;
-
+    font-size: .8rem;
+    transition: all .2s ease;
+}
+.links a:hover {
+    color: white;
 }
 .ctr {
     width: 100%;
     height: 100vh;
-    background-image: url(../imgs/img6.jpg);
+    background-image: url(icon-imgs/pexels-pixabay-315938.jpg);
     background-position: center;
     background-size: cover;
 }
@@ -104,6 +111,9 @@ header {
     letter-spacing: 2px;
     font-size: 3.5rem;
     text-transform: uppercase;
+    display: flex;
+    align-items: center;
+    gap: 1rem;
 }
 .title img {
     width: 75px;
@@ -130,8 +140,8 @@ header {
 }
 .arrow-right,
 .arrow-left {
-    width: 60px;
-    height: 60px;
+    width: 30px;
+    height: 30px;
     position: absolute;
     right: 50px;
     top: 50%;
@@ -139,7 +149,7 @@ header {
     display: flex;
     flex-direction: column;
     justify-content: space-around;
-    gap: 1.3rem;
+    gap: .7rem;
     cursor: pointer;
 }
 .arrow-left {
@@ -171,6 +181,8 @@ header {
     width: 100%;
     height: 100vh;
     padding: 1rem 1rem;
+    display: flex;
+    align-items: center;
 }
 .section-center,
 .section-center1 {
@@ -185,6 +197,7 @@ header {
 }
 .section-center1 {
     height: 70%;  
+    
 }
 
 .section-center h1 {
@@ -222,8 +235,8 @@ header {
     justify-content: space-evenly;
 }
 .icons-container {
-    width: 50%;
-    height: 40%;
+    width: 30%;
+    height: 25%;
     border-radius: 50%;
     background-color: rgb(18, 18, 84);
     display: flex;
@@ -251,6 +264,7 @@ header {
 .programs-details p {
     width: 80%;
     color: #eee;
+    font-size: .9rem;
     margin: 0 auto;
     text-align: center;
     line-height: 130%;
@@ -266,6 +280,7 @@ header {
     color: #eee;
     text-transform: capitalize;
     box-shadow: 0 0 5px #eee;
+    cursor: pointer;
 }
 .second-section {
     width: 100%;
@@ -340,11 +355,12 @@ header {
     color: rgb(53, 53, 53);
     text-transform: capitalize;
     line-height: 140%;
+    font-size: .9rem;
 }
 .banner {
     
     width: 70%;
-    height: 22%;
+    height: 25%;
     position: absolute;
     right: 0;
     display: flex;
@@ -391,6 +407,7 @@ header {
     text-transform: uppercase;
     color: #eee;
     letter-spacing: 1px;
+    font-size: .7rem;
 }
 .features-name {
     width: 75%;
@@ -400,21 +417,21 @@ header {
     color: #eee;
     text-transform: capitalize;
     letter-spacing: 1.5px;
+    font-size: 1rem;
 }
 .features-para {
     width: 100%;
     display: flex;
     justify-content: space-between;
-    
 }
 .features-para p {
     text-transform: capitalize;
     color: #eee;
     letter-spacing: 1px;
-    font-size: .9rem;
+    font-size: .8rem;
 }
 .features-para button {
-    padding: .4rem .5rem;
+    padding: .4rem .7rem;
     text-transform: uppercase;
     color: #eee;
     border: none;
@@ -422,6 +439,7 @@ header {
     border-radius: 5px;
     box-shadow: 0 0 4px #eee;
     cursor: pointer;
+    font-size: .65rem;
 }
 footer {
     background: linear-gradient(to right, rgb(64, 64, 190)40%,rgb(7, 7, 114));
@@ -445,6 +463,7 @@ footer {
     flex-direction: column;
     justify-content: space-between;
     height: 100%;
+    cursor: pointer;
 }
 .top-links,
 .bottom-links {
@@ -464,12 +483,14 @@ footer {
     text-transform: capitalize;
     color: #eee;
     letter-spacing: 2px;
+    font-size: 1.1rem;
 
 }
 .top-links p,
 .bottom-links p {
     color: #eee;
     line-height: 120%;
+    font-size: .9rem;
 }
 .footer-links img {
     height: 100%;
