--- a/maquette2.css
+++ b/maquette2.css
@@ -246,6 +246,7 @@ header {
 .icons-container img {
     width: 40%;
     height: 40%;
+    object-fit: contain;
 }
 .programs-details {
     width: 100%;
@@ -327,6 +328,7 @@ header {
     width: 100%;
     height: 100%;
     border-radius: 50%;
+    object-fit: cover;
 }
 .new-imgs h1 {
     font-size: 1.1rem;
@@ -368,6 +370,7 @@ header {
 .banner img {
     width: 40%;
     height: 100%;
+    object-fit: cover;
 }
 .banner-details {
     width: 80%;
@@ -491,10 +494,21 @@ footer {
     color: #eee;
     line-height: 120%;
     font-size: .9rem;
+    transition: .3s ease;
+}
+.top-links p:hover {
+    transform: translateY(-2px);
+    text-shadow: 0 0 5px #000;
+    color: rgb(18, 18, 84);
+    border-bottom: 2px solid rgb(18, 18, 84);
+    border-color: #817e7e;
+    padding-bottom: 2px;
 }
 .footer-links img {
     height: 100%;
     width: 100%;
+    object-fit: cover;
+    box-shadow: 0 0 10px #000;
 }
 .icon {
     width: 80%;
@@ -503,10 +517,16 @@ footer {
     align-items: center;
 }
 .icon img {
-    width: 20px;
-    height: 20px;
+    width: 30px;
+    height: 30px;
     margin-right:10px ;
     background-color: #817e7e;
     padding: 5px;
     border-radius: 50%;
+    transition: .3s ease;
+
+}
+.icon img:hover {
+    transform: scale(1.2);
+    box-shadow: 0 0 5px rgb(18, 18, 84);
 }
