--- a/maquette4.css
+++ b/maquette4.css
@@ -58,6 +58,7 @@
     height: 60%;
     width: 80%;
     margin: 0 auto;
+    object-fit: cover;
 }
 .aside-personnel-card h3 {
     text-align: center;
@@ -84,6 +85,12 @@
     background-color: transparent;
     border: 1px solid antiquewhite;
     box-shadow: 0 0 5px antiquewhite;
+    transition: .3s ease;
+}
+.aside-container button:hover {
+    box-shadow: 0 0 10px rgb(4, 4, 77);
+    color: aliceblue;
+    border: none;
 }
 .aside-container-content {
     width: 65%;
@@ -127,11 +134,12 @@
 .business-services-card:nth-of-type(1) h2 img,
 .business-services-card:nth-of-type(2) h2 img {
     width: 30px;
-    height: 20px;
+    height: 30px;
 }
 .business-services-card:nth-of-type(3) img {
     width: 100%;
     height: 100%;
+    object-fit: cover;
 
 }
 .business-services-card:nth-of-type(4){
@@ -150,6 +158,11 @@
     border-radius: 10px;
     box-shadow: 0 0 8px rgb(4, 4, 77);
     margin-top: 10px;
+    transition: .3s ease;
+}
+.business-services-card:nth-of-type(4) button:hover{
+    background-color: rgb(4, 4, 77);
+    color: aliceblue;
 }
 
 .business-services-card:nth-of-type(5){
@@ -249,10 +262,15 @@
     align-items: center;
     justify-content: center;
     cursor: pointer;
+    transition: .4s ease;
 }
 .our-products-support-icons div img {
-    width: 50%;
-    height: 60%;
+    width: 40%;
+    height: 45%;
+}
+.our-products-support-icons div:hover  {
+    transform: translateY(-.2rem);
+    box-shadow: 0 0 10px rgb(4, 4, 77);
 }
 .III-section {
     width: 100%;
@@ -271,6 +289,8 @@
 .third-section-container img {
     width: 35%;
     height: 100%;
+    object-fit: cover;
+    object-position: top;
 }
 .our-founder {
     width: 58%;
